<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditorAtividadeActivity">
    <TextView
        android:id="@+id/text_tipo_de_atividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_tipos_atividade"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <RadioGroup
        android:id="@+id/radiogroup_tipo_atividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        app:layout_constraintStart_toEndOf="@id/text_tipo_de_atividade"
        app:layout_constraintTop_toTopOf="parent">
        <RadioButton
            android:id="@+id/radio_caminhada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_caminhada"/>
        <RadioButton
            android:id="@+id/radio_ciclismo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_ciclismo"/>
        <RadioButton
            android:id="@+id/radio_corrida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_corrida"/>
        <RadioButton
            android:id="@+id/radio_natacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_natacao"/>
    </RadioGroup>
    <EditText
        android:id="@+id/edit_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/distance_edittext"
        android:hint="@string/title_duracao_atividade"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/radiogroup_tipo_atividade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/edit_distancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_distancia_atividade"
        android:inputType="numberDecimal"
        android:layout_margin="@dimen/distance_edittext"
        app:layout_constraintTop_toBottomOf="@id/edit_time"/>
    <EditText
        android:id="@+id/edit_calorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/distance_edittext"
        android:hint="@string/title_calorias_atividade"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/edit_distancia"/>
    <Button
        android:id="@+id/button_salvar_atividade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_button_salvar"
        android:layout_marginStart="@dimen/button_distance_size"
        android:layout_marginEnd="@dimen/button_distance_size"
        android:layout_marginTop="@dimen/distance_edittext"
        app:layout_constraintStart_toStartOf="@id/edit_calorias"
        app:layout_constraintEnd_toEndOf="@id/edit_calorias"
        app:layout_constraintTop_toBottomOf="@id/edit_calorias"/>
</androidx.constraintlayout.widget.ConstraintLayout>